Fixed issue #34